# jbh_ctp_gateway

./: README
0_client/: CMakeLists.txt  README  client_main.cpp
0_client/0_include/: 0_base_trade_api.h  0_trade_api.h  1_future_api.h
0_client/0_include/0_base_trade_data_class/: 0_base_trade_limit_entrust.h  1_base_trade_limit_order.h  2_base_trade_limit_order_action.h
0_client/0_include/0_trade_data_class/: 0_trade_limit_entrust.h
0_client/0_include/1_future_data_class/: 0_future_limit_entrust.h  1_future_limit_order.h  2_future_limit_order_action.h  3_future_limit_trade.h
0_client/1_source/0_trade_client_api/0_future_api_implement/: 0_con_destructor.cpp  1_init.cpp  1_limit_entrust_insert.cpp  2_limit_entrust_insert.cpp  2_limit_order_cancel.cpp  4_register_spi.cpp
0_client/1_source/0_trade_client_api/0_future_trade_api/: 0_future_trade_api.h
0_client/1_source/0_trade_client_api/0_future_trade_api/1_future_trade_data_class/: 0_future_trade_limit_entrust.h
0_client/1_source/1_client_connector/: 0_client_connector.h
0_client/1_source/1_client_connector/0_client_connector_implement/: 0_con_destructor.cpp  1_error_handling.cpp  2_init.cpp  3_connect_to_server.cpp  4_receive_from_server.cpp  5_start_receive.cpp  6_send_to_server.cpp  7_close_connection.cpp  7_stop_reveive.cpp  8_register_spi.cpp
0_client/2_build/: CMakeCache.txt  Makefile  client  cmake_install.cmake
1_server/: CMakeLists.txt  CTPConnect.json  server_main.cpp
1_server/0_include/: 0_future_gateway.h
1_server/0_include/0_trade_data_class/: 0_trade_limit_entrust.h  1_trade_limit_order.h  2_trade_limit_order_action.h
1_server/0_include/1_future_data_class/: 0_future_limit_entrust.h  1_future_limit_order.h  2_future_limit_order_action.h  3_future_limit_trade.h
1_server/1_source/0_server_connector/: 0_server_connector.h
1_server/1_source/0_server_connector/0_server_connector_implement/: 0_error_handling.cpp  10_run_server.cpp  11_add_gateway.cpp  12_write_server_response_to_queue.cpp  13_read_server_response_from_queue.cpp  1_init.cpp  2_accept_clients.cpp  3_interact_with_one_client.cpp  3_receive_client_message.cpp  3_receive_client_request.cpp  4_process_client_message.cpp  4_write_client_request_to_queue.cpp  4_write_message_to_queue.cpp  5_read_client_request_from_queue.cpp  5_read_message_from_queue.cpp  5_send_to_client.cpp  6_process_client_request.cpp  6_stop_interact_with_client.cpp  7_con_destructor.cpp  7_send_to_client.cpp  8_run_server.cpp  8_stop_interact_with_client.cpp  9_con_destructor.cpp
1_server/1_source/1_future_server/1_CTP_gateway/: 0_CTP_gateway.h  CMakeLists.txt  CTPConnect.json
1_server/1_source/1_future_server/1_CTP_gateway/0_CTP_gateway_implement/: 0_con_destructor.cpp  10_confirm.cpp  10_req_connect.cpp  11_req_authenticate.cpp  11_req_connect.cpp  12_req_authenticate.cpp  12_req_login.cpp  13_req_login.cpp  13_req_query_settlement_confirm.cpp  14_req_query_settlement_confirm.cpp  14_req_settlement_confirm.cpp  15_req_entrust_insert.cpp  15_req_settlement_confirm.cpp  16_req_entrust_action.cpp  16_req_entrust_insert.cpp  17_OnFrontConnected.cpp  18_OnFrontConnected.cpp  18_OnFrontDisconnected.cpp  19_OnFrontDisconnected.cpp  19_OnRspAuthenticate.cpp  1_prepare.cpp  20_OnRspAuthenticate.cpp  21_OnRspQrySettlementInfoConfirm.cpp  21_OnRspUserLogin.cpp  22_OnRspQrySettlementInfoConfirm.cpp  22_OnRspSettlementInfoConfirm.cpp  23_OnRspSettlementInfoConfirm.cpp  23_OnRspUserLogout.cpp  24_OnRspOrderInsert.cpp  25_OnErrRtnOrderInsert.cpp  26_OnErrRtnOrderInsert.cpp  26_OnRspOrderAction.cpp  27_OnRtnOrder.cpp  28_OnRtnTrade.cpp  29_OnRtnTrade.cpp  29_generate_new_request_id.cpp  2_limit_entrust_insert.cpp  30_add_server.cpp  30_is_error_response.cpp  3_limit_order_action.cpp  (+6 more)
1_server/1_source/2_utils/: 0_string_utils.hpp
1_server/2_build/: CMakeCache.txt  Makefile  cmake_install.cmake  server
1_server/2_build/1_source/1_future_server/1_CTP_gateway/: Makefile  cmake_install.cmake
1_server/2_build/CTPFlow/flows/9999/210468/: Private.con  Public.con  TradingDay.con
